fix: update action button visibility based on open state

--- a/frontend/src/container/SpanDetailsDrawer/Attributes/Attributes.styles.scss
+++ b/frontend/src/container/SpanDetailsDrawer/Attributes/Attributes.styles.scss
@@ -83,6 +83,10 @@
 
 			.action-btn {
 				display: none;
+
+				&--is-open {
+					display: flex;
+				}
 				position: absolute;
 				right: 8px;
 				top: 50%;
